# forge

./: '  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  imgui.ini  out.txt  todo.md  todo.txt
examples/: model.rs  testbed.rs
examples/shaders/: triangle.frag.spv  triangle.vert.glsl
shaders/: triangle.frag.glsl  triangle.vert.glsl  triangle.vert.spv
src/: buffer.rs  context.rs  device.rs  image.rs  instance.rs  lib.rs  physical_device.rs  renderdc.cap  shader_object.rs  surface.rs  swapchain.rs
src/assets/: mod.rs
src/camera/: fly_camera.rs  mod.rs
src/gltf/: mod.rs  node.rs  scene.rs
src/renderer/: buffer.rs  context.rs  device.rs  image.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  shader_object.rs  surface.rs  swapchain.rs  vulkan_context.rs  vulkan_renderer.rs
src/scene/: mesh.rs  mod.rs  model.rs  texture.rs
src/ui/: imgui_renderer.rs  imgui_sdl3_binding.rs  imgui_sdl3_platform.rs  mod.rs
src/utils/: handle.rs  memory.rs  mod.rs
