[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
ash = { version = "0.38.0", features = ["linked"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
either = "1.13.0"
env_logger = "0.11.5"
imgui = { version = "0.12.0", features = ["docking"] }
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
sdl3 = { version = "0.14.2", features = ["ash", "build-from-source"] }
tobj = { version = "4.0.2", features = ["ahash"] }
